# docs/openapi.json
@@ -12,7 +12,7 @@
     "/api/v1/events/{id}" : {
       "get" : {
         "tags" : [ "event-controller" ],
-        "operationId" : "findById",
+        "operationId" : "findById_1",
         "parameters" : [ {
           "name" : "id",
           "in" : "path",
@@ -90,6 +90,49 @@
       }
     },
     "/api/v1/holidays" : {
+      "get" : {
+        "tags" : [ "holiday-controller" ],
+        "operationId" : "list_3",
+        "parameters" : [ {
+          "name" : "schoolId",
+          "in" : "query",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "format" : "uuid"
+          }
+        }, {
+          "name" : "approved",
+          "in" : "query",
+          "required" : false,
+          "schema" : {
+            "type" : "boolean"
+          }
+        }, {
+          "name" : "source",
+          "in" : "query",
+          "required" : false,
+          "schema" : {
+            "type" : "string",
+            "enum" : [ "CUSTOM", "FEDERAL" ]
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/HolidayView"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "post" : {
         "tags" : [ "holiday-controller" ],
         "operationId" : "create",
@@ -120,7 +163,7 @@
     "/api/v1/events" : {
       "get" : {
         "tags" : [ "event-controller" ],
-        "operationId" : "list_3",
+        "operationId" : "list_4",
         "parameters" : [ {
           "name" : "schoolId",
           "in" : "query",
@@ -340,10 +383,37 @@
         }
       }
     },
+    "/api/v1/holidays/{id}" : {
+      "get" : {
+        "tags" : [ "holiday-controller" ],
+        "operationId" : "findById",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "format" : "uuid"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/HolidayView"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/classrooms" : {
       "get" : {
         "tags" : [ "classrooms-controller" ],
-        "operationId" : "list_4",
+        "operationId" : "list_5",
         "parameters" : [ {
           "name" : "schoolId",
           "in" : "query",
